
- Added CCR extension support to Health register entry.

- Added epub accessors to Books API.

- Added block callback support to GDataHTTPFetcher

- Added sentData callback support to GDataHTTPFetcher on Snow Leopard and
  iPhone 3.0

- Added GDataAuthenticationFetcher, which can be used to create a fetcher
  for Google ClientLogin authentication, depending only on GDataHTTPFetcher.

- Added YouTube convenience accessors highQualityThumbnail and
  mediaContentWithFormatNumber:
  
- Added OCR and translation on upload to the DocsSample app.

- Added calendar query setShouldShowHiddenEvents: for displaying unanswered
  calendar invitations.

Changes

- Parsing is now done asynchronously (on another thread, via NSOperationQueue)
  and NSNotifications are sent when parsing begins and ends.

- Batch fetches now always disable shouldIgnoreUnknownXML so that the results
  in the batch feed can be used for updates.

- The shouldIgnoreXML flag is now settable in individual tickets.

- Made object properties dictionaries more KVO-compliant (thanks mtonkin)

- GDataHTTPFetcher dated data cache now is bounded in size (by default, 15 MB
  for Mac, 1 MB for iPhones) making it suitable for use on iPhones

- GDataHTTPFetcher now takes a GDataFetchHistory class rather than a mutable
  dictionary as the optional fetch history

- The service progress callback now takes a ticket as its first parameter
  rather than a progress monitor input stream, as progress monitoring
  no longer requires that input stream on iPhone 3.0 and Mac OS X 10.5.8
  
- Rather than warn about an omitted user agent, just quietly default to the
  bundle ID instead.

- Renamed analyticsProperties to avoid conflict with properties of the
  GDataObject base class.

Bugs Fixed

- Setting the name of a Google Base attribute also now sets the XML element
  local name.

- Fixed the atomPub URI when creating new objects with code protocol v2.
